kustomize/overlay/prod/newmusatestproject-prod-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-and-limited-ingress
  namespace: newmusatestproject-prod
  labels:
    organizationId: org_214f8824-489e-4427-b043-83252b36ac2b
    projectId: project_e045038e-659d-446f-80a4-9ea25944f637
    environmentId: env_030b3cbb-ae2d-4c9e-a8fc-df57562b06fb
spec:
  podSelector: {}
  egress:
    - {}
  policyTypes:
    - Egress
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              environmentId: env_030b3cbb-ae2d-4c9e-a8fc-df57562b06fb
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: skyu-system
    - from:
        - namespaceSelector:
            matchLabels:
              role: ingress
    - from:
        - namespaceSelector:
            matchLabels:
              role: observability
